Alter description project

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A website with a toolbox for developers, with code generators and conversions to assist no dia a dia."
+      content="A website with a toolbox for developers, with code generators and conversions to help in everyday life."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
