--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       gtag('config', 'UA-167416056-1');
     </script>
 
+    <meta name="keywords" content="BorderRadius, RadiusBorder, borderradius, radiusborder, Border Radius, Border, border, radius, Radius, Radius Border, radius border, boxshadow, shadowbox, BoxShadow, ShadowBox, Shadow Box, shadow box, Box Shadow, box shadow , Box, Shadow, shadow, box, timestamp, Timestamp, Time Stamp, time stamp, time ,CSS, JavaScript">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
